test: 테스트 추가 쉼표로 문자열 분리 되는지